--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "firebase": "^10.1.0",
+    "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "vuefire": "^3.1.12"
   },
